# Huawei_MLkitSample

MLKit-Sample/: build.gradle
MLKit-Sample/gradle/wrapper/: gradle-wrapper.properties
MLKit-Sample/module-body/: build.gradle
MLKit-Sample/module-body/src/main/: AndroidManifest.xml
MLKit-Sample/module-body/src/main/cpp/: CMakeLists.txt  detour.c
MLKit-Sample/module-body/src/main/java/com/huawei/mlkit/sample/: FyApplication.java  NativeHacker.java
MLKit-Sample/module-body/src/main/java/com/huawei/mlkit/sample/activity/: StartActivity.java
MLKit-Sample/module-body/src/main/java/com/huawei/mlkit/sample/activity/facecompare/: FaceVerificationActivity.java
MLKit-Sample/module-text/: agconnect-services.json  build.gradle
